--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -13,7 +13,7 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-}
+  }
 
 #logo-nav img{
     width: 200px;
@@ -28,7 +28,7 @@
 
 
 #search-home input{
-    padding: 0.9rem 3.5rem;
+    padding: 0.9rem 3.8rem;
     border-radius: 20px;
     width: 500px;
     background-color: #bebebe;
@@ -55,11 +55,19 @@
 #resgistrar a{
   color: #fff;
   padding: 0 10px;
+  text-decoration: none;
+  font-size: .9rem;
+}
+#resgistrar .Register a:hover{
+  opacity: 0.7;
+  transition: 0.4s;
+}
+#resgistrar .Register-seller a:hover{
+  opacity: 0.7;
+  transition: 0.4s;
 }
 
-#resgistrar:hover {
-    color: #fff;
-}
+
 
 #car-buy .icon-cart{
   color: #fff;
@@ -67,6 +75,8 @@
   height: 30px;
   margin-right: 1rem;
 }
+
+
 
 #box-search{
   position: absolute;
@@ -80,13 +90,6 @@
   z-index: 1000;
   align-items: center;
 }
-/* #box-search li{
- text-align: center;
- padding: 5px;
- font-size: 1.2rem;
- font-weight: bold;
-
-} */
 
 #box-search li {
   padding: 15px 5px;
@@ -123,6 +126,19 @@
   color: #1702a1;
 }
 
+#box-loading{
+  position: absolute;
+  top: 60px;
+  width: 500px; 
+  max-height: 900px; 
+  overflow-y: auto;
+  background-color: #bebebe;
+  border: 1px solid #fff;
+  border-radius: 20px;
+  z-index: 1000;
+  text-align: center;
+  font-size: 1.2rem;
+}
 
 
 
