--- a/src/components/ProductScreenComponents/InfoProduct/style.css
+++ b/src/components/ProductScreenComponents/InfoProduct/style.css
@@ -5,3 +5,118 @@
     font-family: "Montserrat", sans-serif;
 }
 
+#container{
+    max-width: 1600px;
+    min-height: 100vh;
+    margin: 2rem auto;
+    box-shadow: rgba(7, 7, 7, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+    border-radius: 20px;
+    overflow: hidden;
+    padding: 20px 20px;    
+}
+
+#detalhe-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 30px 50px;
+    gap: 50px;
+    
+}
+
+#detalhe-image img{
+   width: 500px;
+   max-height: 500px;
+    object-fit: contain;
+}
+
+/* .detalhe-product{
+    max-width: 600px;
+    min-height: 80vh;
+    margin: 2rem auto;
+    box-shadow: rgba(7, 7, 7, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+    border-radius: 20px;
+    overflow: hidden;
+    padding: 20px 20px;   
+} */
+
+.detalhe-product {
+    width: 600px;
+    height: 500px; 
+    margin: 2rem auto;
+    box-shadow: rgba(7, 7, 7, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+    border-radius: 20px;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    overflow: hidden;
+}
+
+.detalhe-product h1{
+   font-size: 2rem;
+   text-align: start;
+   margin-bottom: 30px;
+   align-items: center;
+   min-height: 60px;
+}
+
+.detalhe-product p{
+text-align: start;
+   font-size: 2.2rem;
+   color: #0b14c8;
+border-bottom: 2px solid #ccc;
+
+}
+.detalhe-product svg{
+    margin-bottom: 30px;
+}
+
+#detalhe-product-allDescripition{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+
+}
+
+.type-descripition {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin: 30px 0;
+}
+
+.type-descripition button {
+  padding: 10px 25px;
+  border: none;
+  background: #f3f3f3;
+  border-radius: 8px;
+  cursor: pointer;
+  font-weight: 600;
+  transition:  0.9s;
+}
+
+.type-descripition button:hover {
+  background: #e2e2e2;
+}
+
+.type-descripition button.active {
+  background: #d0d0d0;
+  color: #000;
+}
+
+.tab-content {
+  max-width: 1000px;
+  margin: 0 auto;
+  background: #fff;
+  border-radius: 12px;
+  padding: 20px;
+    box-shadow: #0b14c8 0px 5px 15px -5px, #0b14c8 0px 8px 15px -8px;
+  text-align: left;
+}
+
+.tab-content h2 {
+  margin-bottom: 15px;
+  font-size: 1.8rem;
+}
+
