--- a/src/components/ProductScreenComponents/InfoProduct/style.css
+++ b/src/components/ProductScreenComponents/InfoProduct/style.css
@@ -9,8 +9,8 @@
     max-width: 1600px;
     min-height: 100vh;
     margin: 2rem auto;
-    box-shadow: rgba(7, 7, 7, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
     border-radius: 20px;
+    box-shadow: rgba(7, 7, 7, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
     overflow: hidden;
     padding: 20px 20px;    
 }
@@ -21,7 +21,7 @@
     justify-content: center;
     padding: 30px 50px;
     gap: 50px;
-    
+    margin-bottom: 5rem;
 }
 
 #detalhe-image img{
@@ -51,6 +51,7 @@
     flex-direction: column;
     justify-content: flex-start;
     overflow: hidden;
+
 }
 
 .detalhe-product h1{
@@ -94,6 +95,9 @@ border-bottom: 2px solid #ccc;
   cursor: pointer;
   font-weight: 600;
   transition:  0.9s;
+  font-size: 1.2rem;
+  font-weight: bold;
+  
 }
 
 .type-descripition button:hover {
@@ -113,6 +117,8 @@ border-bottom: 2px solid #ccc;
   padding: 20px;
     box-shadow: #0b14c8 0px 5px 15px -5px, #0b14c8 0px 8px 15px -8px;
   text-align: left;
+      margin-bottom: 5rem;
+
 }
 
 .tab-content h2 {
