Fizemos novos componestes como as cores de variações e algumas atualizações

--- a/src/components/SelectionProducts/SelectionProducts.css
+++ b/src/components/SelectionProducts/SelectionProducts.css
@@ -84,6 +84,10 @@
     margin-top: 10px;
 }
 
+.button-buy button{
+    cursor: pointer;
+}
+
 .buy-product{
      width: 100%;
     padding: 10px ;
