--- a/src/components/ProductScreenComponents/InfoProduct/style.css
+++ b/src/components/ProductScreenComponents/InfoProduct/style.css
@@ -26,6 +26,7 @@
 
 #detalhe-image img{
    width: 500px;
+   max-width: 500px;
    max-height: 500px;
     object-fit: contain;
 }
@@ -121,3 +122,6 @@ text-align: start;
   font-size: 1.8rem;
 }
 
+.ProductVariation{
+  margin-top: 20px;
+}
