--- a/src/components/FooterComponents/TermsUse/TermUse.css
+++ b/src/components/FooterComponents/TermsUse/TermUse.css
@@ -13,33 +13,39 @@
     
 }
 
-#conatiner-TermUse{
+.conatiner-TermUse{
     padding: 30px;
     margin-bottom: 100px;
-   
-
-    
 }
-#conatiner-TermUse {
+
+.conatiner-TermUse {
     display: flex;
    flex-direction: column;
    align-items: center;
-
+}
+.conatiner-TermUse-Buyer {
+    display: flex;
+   flex-direction: column;
+   align-items: center;
 }
 
 
-#conatiner-TermUse p{
+.conatiner-TermUse p{
     margin-top: 40px;
     font-size: 1.3rem;
     font-weight: bold;
 
 }
-#conatiner-TermUse h1{
+.conatiner-TermUse h1{
     color: #0b14c8;
 
 }
 
-#conatiner-TermUse img{
+.conatiner-TermUse-Buyer h1{
+    color: #074107;
+
+}
+
+.conatiner-TermUse img{
  width: 200px;
- color: #0b14c8;
 }
