--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -6,13 +6,17 @@
 }
 
 
-#container-nav{
+.container-nav{
     background-color: #1702a1;
     width: 100%;
     max-height: 150px;
     display: flex;
     justify-content: space-around;
     align-items: center;
+  }
+
+.container-nav-Buyer{
+    background-color: #074107;
   }
 
 #logo-nav img{
