--- a/src/elements/Tooltip/Tooltip.css
+++ b/src/elements/Tooltip/Tooltip.css
@@ -21,6 +21,9 @@
   opacity: 0;
   transition:  0.5s;
 }
+.tooltip-text-Buyer {
+  color: #074107;
+}
 
 .tooltip-container:hover .tooltip-text {
   visibility: visible;
