Retocamos em algumas atualizações para o funcionamento do front

--- a/src/Templates/Seller/ComponentsSeller/Products/style.css
+++ b/src/Templates/Seller/ComponentsSeller/Products/style.css
@@ -80,7 +80,7 @@
 .ButtonsProduct{
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: center;
 }
 
 .button-buySeller{
